--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 /*header section*/
 .hero_area {
   height: 100vh;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url(../images/hero-bg.webp);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
